# SchemesBuilder

./: .gitignore  CMakeLists.txt  CoreLogger.hpp  GraphField.qml  Main.qml  TableLoadDialog.qml  abstractsaver.cpp  abstractsaver.hpp  abstracttableformer.cpp  abstracttableformer.hpp  drawiosaver.cpp  drawiosaver.hpp  graph_data.cpp  graph_data.hpp  graph_painter.cpp  graph_painter.hpp  graph_test.cpp  graphbuilder.cpp  graphbuilder.hpp  graphnode.cpp  graphnode.hpp  graphnodeonlyread.cpp  graphnodeonlyread.hpp  main.cpp  option_configurator.cpp  table_example.txt  table_former.cpp  table_former.hpp  tableformer.cpp  tableformer.hpp  tableformerdatabasedtype.cpp  tableformerdatabasedtype.hpp  tablepreprocessor.cpp  tablepreprocessor.hpp  tablereader.cpp  tablereader.hpp
